--- a/index.html
+++ b/index.html
@@ -54,27 +54,29 @@
 
     /* ======= Hero + 特效 ======= */
     header.hero{position:relative; min-height:100svh; display:grid; place-items:center; overflow:hidden}
-    .gradient-bg{position:absolute; inset:-20%; background:radial-gradient(60% 60% at 70% 30%, rgba(90,212,255,.5), transparent 60%), radial-gradient(60% 60% at 30% 70%, rgba(124,255,193,.4), transparent 60%), linear-gradient(120deg, #111422, #0b0d13 60%); filter:saturate(1.2); animation:floatGrad 16s ease-in-out infinite alternate}
+    .gradient-bg{position:absolute; inset:-20%; background:radial-gradient(60% 60% at 70% 30%, rgba(90,212,255,.5), transparent 60%), radial-gradient(60% 60% at 30% 70%, rgba(124,255,193,.4), transparent 60%), linear-gradient(120deg, #111422, #0b0d13 60%); filter:saturate(1.2); animation:floatGrad 16s ease-in-out infinite alternate; pointer-events:none}
     @keyframes floatGrad{to{transform:translate3d(0,-2%,0) scale(1.04)}}
 
     /* 玻璃卡片與掃描光特效 */
-    .hero-card{position:relative; background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.03)); backdrop-filter:saturate(120%) blur(8px); border:1px solid rgba(255,255,255,.1); border-radius: var(--radius); box-shadow:var(--shadow); padding:40px 28px; z-index:2}
-    .hero-card:before{content:""; position:absolute; inset:-1px; border-radius:inherit; background:conic-gradient(from 0deg, rgba(90,212,255,.0) 0deg, rgba(90,212,255,.35) 120deg, rgba(124,255,193,.0) 240deg); filter:blur(8px); animation:spin 10s linear infinite}
+    .hero-card{position:relative; background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.03)); backdrop-filter:saturate(120%) blur(8px); border:1px solid rgba(255,255,255,.1); border-radius: var(--radius); box-shadow:var(--shadow); padding:40px 28px; z-index:2; isolation:isolate}
+    .hero-card:before{content:""; position:absolute; inset:-1px; border-radius:inherit; background:conic-gradient(from 0deg, rgba(90,212,255,.0) 0deg, rgba(90,212,255,.35) 120deg, rgba(124,255,193,.0) 240deg); filter:blur(8px); animation:spin 10s linear infinite; z-index:-1; pointer-events:none}
     @keyframes spin{to{transform:rotate(1turn)}}
-    .scan{position:absolute; inset:0; overflow:hidden; border-radius:inherit; pointer-events:none}
+    .scan{position:absolute; inset:0; overflow:hidden; border-radius:inherit; pointer-events:none; z-index:0}
     .scan::before{content:""; position:absolute; left:-40%; top:0; width:40%; height:180%; transform:rotate(20deg); background:linear-gradient(90deg, transparent, rgba(255,255,255,.25), transparent); animation:scan 6s ease-in-out infinite}
     @keyframes scan{50%{left:110%}}
 
     .hero-title{font-size: clamp(28px, 5vw, 56px); line-height:1.15; margin:0 0 12px; letter-spacing:.5px}
     .hero-sub{color:var(--muted); margin:0 0 24px; font-size: clamp(14px, 2.6vw, 18px)}
-    .hero-cta{display:flex; gap:12px; flex-wrap:wrap}
+    .hero-cta{display:flex; gap:12px; flex-wrap:wrap; position:relative; z-index:1}
     .btn{display:inline-flex; align-items:center; gap:10px; padding:12px 18px; border-radius:999px; border:1px solid transparent; background:var(--brand); color:#001018; font-weight:700; box-shadow:var(--shadow); cursor:pointer}
     .btn.secondary{background:transparent; color:var(--fg); border-color:rgba(255,255,255,.18)}
 
     /* Sticky mini-nav */
-    .mini-nav{position:fixed; top:0; inset-inline:0; display:flex; justify-content:center; gap:16px; padding:10px; z-index:100; backdrop-filter:blur(8px); background:linear-gradient(180deg, rgba(8,10,16,.75), rgba(8,10,16,.35)); border-bottom:1px solid rgba(255,255,255,.06); transform:translateY(-100%); transition:transform .35s ease}
+    .mini-nav{position:fixed; top:0; inset-inline:0; display:flex; justify-content:flex-start; gap:12px; padding:10px 14px; z-index:100; backdrop-filter:blur(8px); background:linear-gradient(180deg, rgba(8,10,16,.75), rgba(8,10,16,.35)); border-bottom:1px solid rgba(255,255,255,.06); transform:translateY(-100%); transition:transform .35s ease; overflow-x:auto; overscroll-behavior-x:contain; -webkit-overflow-scrolling:touch; scrollbar-width:none; scroll-snap-type:x proximity}
+    .mini-nav::-webkit-scrollbar{display:none}
+    @media(min-width:900px){ .mini-nav{justify-content:center} }
     .mini-nav.show{transform:none}
-    .mini-nav a{color:#dce6f3; padding:8px 12px; border-radius:999px; font-size:14px; border:1px solid transparent}
+    .mini-nav a{color:#dce6f3; padding:8px 12px; border-radius:999px; font-size:14px; border:1px solid transparent; flex:0 0 auto; white-space:nowrap; scroll-snap-align:start}
     .mini-nav a:hover{border-color:rgba(255,255,255,.15)}
 
     /* ======= Section titles ======= */
